modified proto file for message structure
