# internal/model/message.go
@@ -3,8 +3,9 @@ package model
 import "time"
 
 type Message struct {
-	From string
-	Text string
+	From      string
+	Text      string
+	CreatedAt time.Time
 }
 
 type MessageInfo struct {
